[package]
name = "rust-auth-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.13", features = ["chrono-0_4","serde_with"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
actix-web-httpauth = "0.8"
actix-limitation = "0.5"
redis = { version = "0.24", features = ["tokio-comp"] }
lazy_static = "1.4"
rand = "0.9.2"
serde_with = "3.15.0"


[dev-dependencies]
actix-rt = "2.9"

[cookie]
path = "/"
domain = ""
secure = false
http_only = true
same_site = "Lax"

